# Django-Boilerplate

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml  pytest.ini
Docker/: .env.example  docker-compose.yml  init.sql
core/: admin.py  models.py
core/management/commands/: start_celery_beat.py  start_celery_flower.py  start_celery_worker.py  start_gunicorn_server.py  start_locust.py  start_redis.py  start_smtp4dev.py  startdockerservers.py
core/migrations/: 0001_initial.py  0002_useractivity.py
core_project/: settings.py  urls.py
home/: tasks.py  urls.py  views.py
locustfiles/: users.py
main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
main/settings/: common.py  pro.py
mainProject/: asgi.py  celery.py  urls.py  wsgi.py
mainProject/settings/: common.py  dev.py
templates/: base.html  index.html
templates/home/: index.html
templates/includes/: header.html
templates/layouts/: blank.html
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_address_id_alter_address_profile.py  0002_alter_profileimage_image.py
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: profile_settings.html
users/tests/: conftest.py  test_users.py
vanillaDajngo/: asgi.py  settings.py  urls.py  wsgi.py
