[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-cleanup>=9.0.0",
    "django-countries>=8.2.0",
    "django-debug-toolbar>=6.1.0",
    "pillow>=12.0.0",
]
